# tecox

./: .gitignore  AUTHORS  BSDmakefile  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  configure.ac  crtrub.c  intro.xml  main.c  pi.tes  readme.txt  teco.c  teco.tes  teco.xml  tecocmd.c  tecodef.h  tecoio.c  tecoio.h  tecomsg.c  tecomsg.h  tecounix.c
doc/: .gitignore  Makefile.am  ap_acs.xml  ap_bpx.xml  ap_err.xml  ap_idx.xml  ap_inc.xml  ap_os8.xml  ap_rsts.xml  ap_rsx.xml  ap_rt.xml  ap_tops.xml  ap_unix.xml  ap_vms.xml  ap_vte.xml  ch_bas.xml  ch_call.xml  ch_com.xml  ch_con.xml  ch_cse.xml  ch_inv.xml  gloss.xml  intro.xml  preface.xml  teco.xml  tecohlp.hlp_in
include/: .gitignore  Makefile.am  tecochr.h  tecodef.h  tecomsg.h
lib/: Makefile.am  crtrub.c  extrn.h  globals.h  macros.h  teco.c  tecocmd.c  tecoio.c  tecomsg.c  tecomsg.h  tecounix.c  tecoutil.c
old/: ch_bas.xml  tecomsg.c.gencat  tecomsg.c.old
src/: Makefile.am  main.c  tecomsg.cat  tecomsg.msgx  tecomsg.src
t/: 001.tec  002.tec  002a.tec  003.tec  004.tec  005.tec  006.tec
tools/: .gitignore  Makefile.am  genmsg.c
